fixed layout issues

--- a/static/css/outline.css
+++ b/static/css/outline.css
@@ -1,5 +1,16 @@
 ul ul, ul ol,
 ol ol, ol ul { margin: 4px 0 5px 30px; font-size: 100%;  }
+content{
+    clear: both;
+    width: 100;
+}
+
+.image{
+    float: right;
+    width:20px;
+    height:20px;
+    background:blue;
+}
 textarea{
     border: 0;
     padding: 0;
@@ -10,13 +21,16 @@ textarea{
     border-radius: 0;
     color: #777;
     margin: 0;
-    width: 100%;
+    width: 80%;
     display: inline;
     margin-bottom: 0;
     background: #fff;
     height: 0;
     min-height: 18px;
     vertical-align: text-top;
+    overflow: hidden;
+    resize: none;
+    clear: none;
 }
 
 textarea:focus{
@@ -29,11 +43,36 @@ textarea:focus{
     border-radius: 0;
     color: #777;
     margin: 0;
-    width: 100%;
+    width: 80%;
     display: inline;
     margin-bottom: 0;
     background: #fff;
     height: 0;
     min-height: 18px;
     vertical-align: text-top;
+    overflow: hidden;
+    resize: none;
+    clear: none;
+}
+
+
+.loweredge{
+    width: 100%;
+    height: 2px;
+}
+
+button{
+    float: left;
+    margin-bottom: 0px;
+    padding: 0px 10px;
+    background: #eee; /* Old browsers */
+    background: #eee -moz-linear-gradient(top, rgba(255,255,255,.2) 0%, rgba(0,0,0,.2) 100%); /* FF3.6+ */
+    background: #eee -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.2)), color-stop(100%,rgba(0,0,0,.2))); /* Chrome,Safari4+ */
+    background: #eee -webkit-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* Chrome10+,Safari5.1+ */
+    background: #eee -o-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* Opera11.10+ */
+    background: #eee -ms-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* IE10+ */
+    background: #eee linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* W3C */
+    border: 1px solid #aaa;
+    color: #444;
+    	  cursor: pointer;
 }
